--- a/Wrangling_filter_select.Rmd
+++ b/Wrangling_filter_select.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Data Wrangling - Part I"
 subtitle: "StatPREP R Workshops"
-author: "Your Name"
+author: "Genesis Alfaro"
 output: html_document
 ---
 
